--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Hyeonu Park <nemo1275@gmail.com>"]
 edition = "2018"
 description = "Fails if the directory is modified too recently"
 license = "Unlicense OR MIT"
+readme = "README.md"
+repository = "https://github.com/HyeonuPark/calmdown"
 
 [dependencies]
 structopt = "0.3"
